--- a/ui/signin.css
+++ b/ui/signin.css
@@ -4,7 +4,7 @@ body {
   background-color: #eee;
   background-image: url("background/bg2.jpg");
   background-repeat: no-repeat;
-  background-size: 1560px 1120px;
+  background-size: cover;
   font-family: "Courier New";
 
 }
