Congrats nako akong ui ni improve

--- a/ui/dashboard.css
+++ b/ui/dashboard.css
@@ -9,7 +9,9 @@ p     { display: table-row;  }
 label { display: table-cell; }
 input { display: table-cell; }
 
-
+#tablehead{
+	background-color:#428bca;
+}
 
 .sub-header {
   padding-bottom: 10px;
